# DataGlowUp39

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: pipeline.py
src/extract/: crawler.py  download_files.py  download_files_sinc.py  duckduck.py  extract_file.py  extract_files.py  load_raw_files.py  models.py  pipeline.py  validate.py
src/load/: db_operations.py
src/transform/: data_contract.py  mapping.py  transform_files.py
tests/: test_models.py
