[tool.poetry]
name = "dataglowup39"
version = "0.1.0"
description = ""
authors = ["claudiohpontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.4"
duckdb = "^1.1.3"
aiohttp = "^3.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
